# forte

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md
src/: attribute.rs  lib.rs  prelude.rs  stun.rs
src/ability/: mod.rs  projectile.rs  reaction.rs
src/ability/attribute/: attribute.rs  health.rs  mod.rs  regen.rs
src/ability/react/: damage.rs  despawn.rs  mod.rs  wall.rs
src/effect/: effect.rs  mod.rs  stack.rs
