[package]
name = "forte"
description = "A bevy ecs ability framework"
version = "0.0.0"
authors = ["Aceeri (conmcclusk@gmail.com)"]
homepage = "https://github.com/aceeri/forte"
repository = "https://github.com/aceeri/forte"
license = "MIT + APACHE"
edition = "2021"
categories = ["games", "game-development"]
keywords = ["bevy"]
exclude = ["assets/**/*", "tools/**/*", "github/**/*"]
resolver = "2"

[profile.dev]
opt-level = 3

[workspace]
members = ["./", "tools/ci"]

[dependencies]
smolset = "1.3.1"
fxhash = "0.2.1"
bevy = { version = "0.5", default-features = false }
#bevy = { git = "https://github.com/bevyengine/bevy", default-features = false }

[patch.crates-io]
# We can override the bevy version with remote or local versions
# This method causes less pain to downstream users trying to work off your revisions
#bevy = { git = "https://github.com/bevyengine/bevy", default-features = false }
#bevy = { path = "../bevy" }

[dev-dependencies]
criterion = "0.3"

[lib]
path = "src/lib.rs"

[[bench]]
name = "entity_spawning"
path = "benches/entity_spawning.rs"
harness = false